# FINAl_VERSION

./: .env  .env.example  BETONY_README.md  CHANGES.md  GUEST_MODE.md  GUEST_MODE_INTEGRATION.md  INSTALL.md  MIGRATIONS.md  README.md  README_SETUP.md  SETUP.md  SETUP_DB.md  add_guest_mode.py  alembic.ini  check_admin.py  create_test_user.py  deploy_fixes.py  fix_all.py  fix_emoji.py  fix_test_user.py  generate_sample_posts.py  init_db.py  init_posts.py  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  test_admin_permissions.py  test_api_black_box.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: admin.py  config.py
app/api/: auth.py  comments.py  dependencies.py  friends.py  friendships.py  likes.py  posts.py  roles.py  web.py
app/database/: db_manager.py
app/exceptions/: exceptions.py
app/frontend/: app.js  guest.css  guest.js  index.html  index_with_guest.html
app/models/: comments.py  friendships.py  likes.py  posts.py  roles.py  users.py
app/repositories/: comments.py  friendships.py  likes.py  posts.py
app/routes/: auth_validated.py
app/schemes/: comments.py  friendships.py  posts.py  roles.py  users.py
app/services/: auth.py  comments.py  data_init.py  friendships.py  likes.py  posts.py
migrations/versions/: 001_add_blog_tables.py
